frontend/tests/cases/positive/synInstanceEmpty.gr
-- instance without any implementations

data A = A

interface Simple a

instance Simple A
