frontend/tests/cases/negative/interfaces/overlapping/instanceOverlapConcretePolymorphic.gr
interface Simple a

instance Simple Int

-- overlaps with 'Int'
instance Simple a
